# CurrencyMarketMaking

./: .gitignore  Cargo.toml  Debug_notebook.ipynb  Examples.ipynb  README.md  backtester.py  execution.py
.github/workflows/: cargo.yml  conference2023.yml  poster.yml  python-package.yml  report.yml  rust.yml
Conference 2023 Materials/: README.md
Conference 2023 Materials/poster/: beamerthemevegaposter.sty  poster.tex  refs.bib  sample_doc.tex
Conference 2023 Materials/presentation/: beamerthemevega.sty  bibliografia.bib  main.tex  presentation.tex  sample_doc.tex
data_parsing/: CMakeLists.txt  Cargo.toml
data_parsing/data/: test.tsv  test.txt
data_parsing/src/: main.rs  orderbook.rs  parser.rs
optexec/: CMakeLists.txt  Debug_notebook.ipynb  __init__.py  dataloader.py  execution.py  misc.py  test_twap.py  tradingbot.py
report/: CMakeLists.txt  abstract.tex  appendix.tex  backtest.tex  body.tex  conclusion.tex  document.tex  introduction.tex  refs.bib  vegaarticle.cls
report/codeminted/: l3quote.json  orderbook.rs
src/: main.rs
